# ArUcoSLAM-Android

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/parsleyj/arucoslam/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MarkerTaggedSpaceInterface.cpp  MarkerTaggedSpaceInterface.h  jniUtils.h  map2d.h  native-lib.cpp  opencv-extensions.h  positionRansac.h  utils.h
app/src/main/java/org/opencv/android/: FixedCameraBridgeViewBase.java  FixedJavaCamera2View.java  FixedJavaCameraView.java
app/src/main/java/parsleyj/arucoslam/: CRCCheckedMat.kt  CalibActivity.kt  FrameProcessor.kt  FrameStream.kt  FrameStreamProcessor.kt  LongBox.java  MainActivity.kt  NativeMethods.java  PersistentCameraParameters.kt  PositionHistory.kt  utils.kt
app/src/main/java/parsleyj/arucoslam/datamodel/: ArucoDictionary.kt  CRCCheckedMat.kt  CRCCheckedMutableMat.kt  CalibData.kt  ContiguousDoubleList.kt  ContiguousIntList.kt  FixedMarker.kt  FoundPoses.kt  MarkerTaggedSpace.kt  MonotonicDoubleList.kt  MonotonicIntList.kt  Pose3d.kt  Track.kt  Vec3d.kt
app/src/main/java/parsleyj/arucoslam/datamodel/fixedSpace/: FixedMarker.kt  FixedMarkerTaggedSpace.kt  MarkerTaggedSpace.kt
app/src/main/java/parsleyj/arucoslam/datamodel/slamspace/: SLAMMarker.kt  SLAMSpace.kt
app/src/main/java/parsleyj/arucoslam/framepipeline/: AllPoses.kt  FoundPoses.kt  FrameRecyclableData.kt  MapRendererComponent.kt  MatBlenderComponent.kt  PoseEstimatorComponent.kt  PoseValidityConstraints.kt  SLAMFramePipeline.kt  SLAMFrameRenderer.kt  SLAMStateMaintainerComponent.kt  SLAMStateUpdaterComponent.kt
app/src/main/java/parsleyj/arucoslam/pipeline/: FrameProcessors.kt  Pipeline.kt  Processor.kt  ProcessorPool.kt  RenderingWorkerPool.kt  Worker.kt  WorkerPipelinePool.kt  WorkerPool.kt
app/src/main/java/parsleyj/kotutils/: Either.kt  MutableOptional.kt  generator.kt  kotlinTuples.kt  lazyIt.kt  myMaps.kt  squareLiterals.kt  wordyTuples.kt
app/src/main/java/parsleyj/kotutils/cacheutils/: Cache.kt  CachedVal.kt  SimpleCache.kt
app/src/main/res/layout/: activity_calib.xml  activity_main.xml
app/src/main/res/menu/: calib_menu.xml  main_menu.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/parsleyj/arucoslam/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
